--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
