--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.2",
     "next": "12.3.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.5"
   },
